[gd_scene load_steps=2 format=3 uid="uid://b7v1aycuir6hh"]

[ext_resource type="Script" path="res://Menus/MenuScripts/title.gd" id="1_b63vi"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_b63vi")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = -1
z_as_relative = false
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
z_index = -1
layout_mode = 2

[node name="New" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_direction = 1
layout_mode = 2
offset_left = 91.0
offset_top = -53.0
offset_right = 357.0
offset_bottom = -13.0
text = "New"

[node name="Quit" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -191.0
offset_top = -57.0
offset_right = 60.0
offset_bottom = -17.0
text = "Quit"

[node name="Encyclopedia" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -311.0
offset_top = -10.0
offset_right = 112.0
offset_bottom = 21.0
text = "Encyclopedia"

[node name="Settings" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_left = -314.0
offset_top = -55.0
offset_right = -200.0
offset_bottom = -14.0
text = "Settings"

[node name="Tutorial" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -1.0
offset_top = -215.0
offset_right = 347.0
offset_bottom = -109.0
text = "Tutorial"

[node name="Credits" type="Button" parent="MarginContainer/Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -342.0
offset_top = 127.0
offset_right = 3.0
offset_bottom = 237.0
text = "Credits"

[connection signal="mouse_entered" from="MarginContainer/Control/New" to="." method="_on_new_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/New" to="." method="_on_new_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Control/New" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Control/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/Quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Control/Encyclopedia" to="." method="_on_encyclopedia_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/Encyclopedia" to="." method="_on_encyclopedia_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Control/Encyclopedia" to="." method="_on_encyclopedia_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Control/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Control/Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/Control/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Control/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Control/Credits" to="." method="_on_credits_mouse_exited"]
